# MeanShiftClustering

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  benchmark_baseline.sh  benchmark_cuda.sh  benchmark_large.sh  benchmark_tile.sh  meanshift_sklearn.py  profile.sh
docs/: SoA_analysis.md
docs/latex/: egbib.bib  main.tex
include/: STBImage.h  image.hpp  meanshift.h  meanshiftSoA.h  meanshift_baseline.h  meanshift_cuda.h  meanshift_cuda_2d.h  meanshift_omp.h  meanshift_omp_soa.h  meanshift_seq.h  meanshift_soa.h
results/: benchmark_260530_194819.csv  benchmark_cuda_260614_120733.csv  benchmark_large_260615_143907.csv  benchmark_tile_260614_210840.csv  profile_layout_260604_145646.csv  profile_scaling_260604_145646.csv
src/: STBImage.cpp  kernel_bench.cpp  main.cpp  meanshift.cpp  meanshiftSoA.cpp  meanshift_baseline.cpp  meanshift_cuda.cu  meanshift_cuda_2d.cu  meanshift_omp.cpp  meanshift_omp_soa.cpp  meanshift_seq.cpp  meanshift_soa.cpp
